--- a/index_jp.html
+++ b/index_jp.html
@@ -70,7 +70,26 @@
           北海道パウダーベルトは、スキーヤーにとって魅力的な目的地であり、その卓越したパウダースノー、多様なスキーリゾートとして知られています。北海道の中央部に位置するこのエリアは、南北約200キロメートルにわたり、複数の有名なリゾートで様々なスキー体験を提供しています。
         </p>
         <div class="column-2 my-midium">
-          <img src="./common/images/images01.webp" alt="" />
+          <div class="swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./common/images/images01.webp" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="./common/images/images02.webp" alt="" />
+              </div>
+              <div class="swiper-slide">
+                <img src="./common/images/images03.webp" alt="" />
+              </div>
+
+              <div class="swiper-slide">
+                <img src="./common/images/images04.webp" alt="" />
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+
           <div class="evenly_space">
             <h6>卓越した雪質</h6>
             <p>
@@ -188,7 +207,25 @@
           </div>
           <div class="tab-panel panel-b" role="tabpanel">
             <div class="column-2">
-              <img src="./common/images/tomamu.webp" />
+              <div class="swiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="./common/images/tomamu.webp" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./common/images/images05.webp" alt="" />
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="./common/images/images06.webp" alt="" />
+                  </div>
+
+                  <div class="swiper-slide">
+                    <img src="./common/images/kirinoyu.webp" alt="" />
+                  </div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+              </div>
               <div>
                 <h6>星野リゾート トマム</h6>
                 <p>
@@ -555,12 +592,10 @@
         </div>
         <div class="tab-panel panel-f" role="tabpanel">
           <div class="panel-wrapper">
-            <h6>星野リゾート トマム</h6>
+            <h6>星野リゾート　トマムスキー場</h6>
 
             <p>
-              サラサラの粉雪で知られる星野リゾート トマム。
-              あらゆるレベルに対応する多様なスキーコース。ハイライトには以下が含まれます：
-              アイスビレッジと日本最大のインドアウェーブプール「ミナミナビーチ」
+              2つの山にまたがり北海道のパウダースノーを満喫できるスキー場。未圧雪エリアや道内最大級のスロープスタイルパークを有する個性豊かな29コース、豊富なレッスン、子どもが楽しみながら上達するコースなど、初心者から上級者まで楽しめます。
             </p>
 
             <p>&nbsp;</p>
@@ -568,9 +603,7 @@
             <h6>富良野スキー場</h6>
 
             <p>
-              富良野スキー場は「シャンパンパウダー」の雪質が特徴で、長時間の雪質を楽しめます。
-              あらゆるスキルレベルに適した手入れの行き届いたランニング。
-              リゾートは有名です。素晴らしい山と渓谷の景色が楽しめます。
+              北海道の中央、十勝岳・大雪山連峰の雄大な眺望のもと、内陸に位置するスキー場ならではの良質な雪が魅力のスキー場です。最長滑走距離4,000mのビッグゲレンデは初級者から上級者まで楽しめるバリエーション豊かな全28コース。スキー場から富良野市街地までのアクセスも近く、滞在中のアフタースキーも充実しています。
             </p>
 
             <p>&nbsp;</p>
@@ -578,156 +611,124 @@
             <h6>カムイスキーリンクス</h6>
 
             <p>
-              カムイスキーリンクスは、整備されたリラックスした雰囲気を提供します。
-              グルーミングされていないパウダーが滑る。ツリーランで知られるこのホテルでは、変化に富んだ地形はあらゆるスキルレベルに最適です。
+              カムイスキーリンクスは旭川市内から車で30分という近さながら25本ものコースを持ち、その規模は道北エリア最大、北海道通の間では「日本最強のローカルスキー場」などとも称されているリゾートです。
             </p>
+            <h6>キャンモア・スキービレッジ</h6>
 
             <p>
-              極上のパウダースノーと多彩なアクティビティを楽しめるリゾートです。
-              家族向けのコースから上級者向けのスキー体験まで
-              バックカントリーの冒険。
-            </p>
-
-            <h6>キャンモア スキー ビレッジ</h6>
-
-            <p>
-              東川町にあるスキー場です。
-              コンパクトで多彩なコースを備えた地元の人気スキー場。
+              東川町にあるスキー場。コンパクトながら多彩なコースが人気のローカルスキー場です。
             </p>
 
             <p>&nbsp;</p>
 
-            <h6>大雪山層雲峡</h6>
-
-            <p>黒岳ロープウェイ＆リフトで黒岳（1,984m）へ。 大雪山の最高峰。</p>
-
-            <p>&nbsp;</p>
-
-            <h6>旭岳ロープウェイ</h6>
+            <h6>大雪山層雲峡・黒岳スキー場</h6>
 
             <p>
-              旭岳温泉（1,100m）から五合目までを結ぶ旭岳ロープウェイ
-              旭岳駅（1,600m）まで10分で到着します。 日本一のパウダー。
+              大雪山の秀峰・「黒岳」（1,984ｍ）へと誘う黒岳ロープウェイ&リフト。
             </p>
 
             <p>&nbsp;</p>
 
-            <h6>南富良野スキー場</h6>
+            <h6>大雪山旭岳ロープウェー</h6>
 
             <p>
-              南富良野町にある国営スキー場。スキーです
-              ナイターも楽しめるリゾート 初心者も上級者も同じように楽しめます。
+              標高1,100ｍの旭岳温泉から旭岳の五合目にあたる標高1,600ｍまでを約10分で結ぶ旭岳ロープウェイで、国内有数のパウダーをお楽しみいただけます。
             </p>
 
             <p>&nbsp;</p>
 
-            <p>ぴっぷスキー場</p>
+            <h6>ぴっぷスキー場</h6>
 
             <p>
-              ぴっぷスキー場からは広大な上川盆地を望み、
-              北海道の屋根、大雪山連峰。
-              <br />バリエーション豊かな9つのコースは、
-              北海道北部で最も広大な斜面に整備された、
-              初心者からベテランまで、誰でも十分に楽しむことができます。
-              スキーの本当の楽しさを満喫してください！醍醐味を存分に味わえます！
+              北海道の屋根、大雪山連峰をバックに広大な上川盆地を一望できるぴっぷスキー場。
+              道北一の広大なゲレンデに多彩なバリエーションの９コースが整備され、ビギナーからベテランまで
+              存分に醍醐味を満喫できます!
             </p>
           </div>
         </div>
 
         <div class="tab-panel panel-g" role="tabpanel">
-          <h6>フォーチュンベーグル</h6>
+          <h6>Fortune Bagels</h6>
 
           <p>
-            おいしい空気を使って天然酵母で丁寧に焼き上げたシンプルなパン
-            南富良野町の水と小麦 北海道。
+            南富良野町のおいしい空気と水と道産小麦を天然酵母で丁寧に焼き上げたシンプルなパンです。
           </p>
 
           <p>&nbsp;</p>
 
-          <h6>カフェゴリョウ</h6>
+          <h6>cafeゴリョウ</h6>
 
           <p>
-            傾いた納屋を自分たちで修理してカフェを建てました。
-            大工さんの手伝い。オリジナルのイメージを維持したかったので、
-            内装は少々荒いですが、古き富良野を楽しんでいただければ幸いです。
+            傾いていた納屋を大工さんに教えてもらいながら自分達でコツコツ修理してカフェを作りました。元のイメージを大切にしたかったので多少荒い内装となっておりますが、昔の富良野の雰囲気をお楽しみください。Gentem
+            Stick テストセンター
           </p>
 
           <p>&nbsp;</p>
 
-          <h6>よしのり コッフェ絵</h6>
+          <h6>ヨシノリコーヒー</h6>
 
           <p>
-            ヨシノリコーヒー東川本店ではコーヒー豆とコーヒー豆の販売を行っております。
-            他の商品とコーヒーのテイクアウトのみを提供しています。東川
-            北海道のほぼ中央に位置する、北海道唯一の町です。
-            水道のない北海道で地下水を利用
-            大雪山系の雪解け水がゆっくりと流れ込みます 。
+            ヨシノリコーヒー東川本店は、コーヒー豆などの商品の販売とテイクアウト限定でコーヒーの提供をしています。
+            北海道のほぼ中央に位置する東川町は、大雪山の雪解け水がゆっくりと時間をかけて流れて作る地下水を生活水とした北海道で唯一上水道の無い町です。
           </p>
         </div>
         <div class="tab-panel panel-h" role="tabpanel">
-          <h6>星野リゾート トマム</h6>
+          <h6>スヴァールバルカフェ</h6>
 
           <p>
-            サラサラの粉雪で知られる星野リゾート トマム。
-            あらゆるレベルに対応する多様なスキーコース。ハイライトとしては、
-            アイスビレッジと日本最大の屋内造波プールミナミナビーチ。
+            南富良野町にある古民家をリノベーションしたレストラン。ローストビーフが自慢の隠れ家的レストラン。
+            未確定：7月中旬より道の駅にも出店予定。冬は19時30分まで営業する約束（観光協会と）のため、ぜひお願いしたい。
+          </p>
+          <p>&nbsp;</p>
+
+          <h6>煮干中華 ゆきと花</h6>
+
+          <p>
+            煮干中華とまぜそばの専門店です。ふらのジビエヌードルは蝦夷鹿と羆で出汁をとった、北海道の究極の地産地消といえます。「ミシュランガイド北海道2017」に掲載されています
           </p>
 
           <p>&nbsp;</p>
 
-          <h6>富良野スキー場</h6>
+          <h6>あさひかわラーメン村</h6>
 
           <p>
-            富良野スキー場は「シャンパンパウダー」の雪質が特徴で、長時間の雪質を楽しめます。
-            あらゆるスキルレベルに適した手入れの行き届いたランニング。このリゾートで有名なのは、
-            素晴らしい山と渓谷の景色を眺めることができます。
+            あさひかわラーメン村は、旭川が誇るべきラーメン文化をもっと広く知ってもらおうという、市民意識の盛り上がりの中で１９９６年８月に誕生しました。
           </p>
 
           <p>&nbsp;</p>
 
-          <h6>カムイスキーリンクス</h6>
+          <h6>自由軒</h6>
 
           <p>
-            カムイ スキー
-            リンクスは、手入れが行き届いたリラックスした雰囲気を提供します。
-            整備されていないパウダーが滑る。ツリーランで知られ、さまざまなアクティビティを提供しています
-            すべてのスキルレベルに最適な地形。
+            昭和24年創業の「とんかつと焼肉の店
+            自由軒」は、旭川・買物公園にある定食屋さん。テレビドラマ『孤独のグルメ』の舞台にもなりました。
           </p>
 
           <p>&nbsp;</p>
-
-          <p>
-            極上のパウダースノーと多彩なスキーを楽しめるリゾート
-            家族向けのランニングから上級のバックカントリーまでの体験 冒険。
-          </p>
         </div>
         <div class="tab-panel panel-i" role="tabpanel">
-          <h6>白金 青い池</h6>
+          <h6>青い池　ライトアップ</h6>
           <p>
-            冬は結氷する池が幻想的 照らされた。
-            10分ごとに様々なパターンが変化するようプログラムされています。
-            サイクル。
+            冬季に凍結する池を幻想的にライトアップ。様々なパターンで10分周期で変化が楽しめるようプログラムされている。
           </p>
         </div>
         <div class="tab-panel panel-j" role="tabpanel">
           <h6>入浴施設</h6>
           <div class="column-2">
-            <div>
-              <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <img src="./common/images/kirinoyu.webp" />
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="./common/images/shisainoyu.webp" />
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="./common/images/plateau_sauna.webp" />
-                  </div>
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="./common/images/kirinoyu.webp" />
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
+                <div class="swiper-slide">
+                  <img src="./common/images/shisainoyu.webp" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="./common/images/plateau_sauna.webp" />
+                </div>
               </div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
             </div>
             <div class="flex-column">
               <h6>麒麟の湯</h6>
@@ -1180,7 +1181,7 @@
               </p>
             </div>
 
-            <div class="info-item">
+            <div class="info-imem">
               <span class="material-symbols-outlined">Email</span>
               <p>info@japan-crc.com</p>
             </div>
@@ -1207,7 +1208,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
     <script>
-      var swiper = new Swiper(".mySwiper", {
+      var swiper = new Swiper(".swiper", {
         navigation: {
           nextEl: ".swiper-button-next",
           prevEl: ".swiper-button-prev",
