--- a/index.html
+++ b/index.html
@@ -564,36 +564,46 @@
           <a href="#reservation">BOOK NOW</a>
         </div>
       </section>
-      <div>
-        <p>Simulation</p>
-        <form
-          id="simulation"
-          style="display: flex; flex-direction: column; gap: 8px"
-        >
-          <label for="members">7 years and older</label>
-          <select name="members" id="members">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
+      <div class="simulation-wrapper">
+        <h5>Price Simulation</h5>
+        <form id="simulation">
+          <div class="simulation-item">
+            <label for="members">7 years and older</label>
+            <select name="members" id="members">
+              <option>0</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
 
-          <label for="members">6 years and younger</label>
-          <select name="young_members" id="young_members">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-          </select>
-          <label for="start_date">start_Date</label>
-          <input type="date" id="start_date" name="start_date" />
+          <div class="simulation-item">
+            <label for="members">6 years and younger</label>
+            <select name="young_members" id="young_members">
+              <option>0</option>
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
+          </div>
 
-          <label for="end_date">end_date</label>
-          <input type="date" id="end_date" name="end_date" />
+          <div class="simulation-item">
+            <label for="start_date">start_Date</label>
+            <input type="date" id="start_date" name="start_date" />
+          </div>
+
+          <div class="simulation-item">
+            <label for="end_date">end_date</label>
+            <input type="date" id="end_date" name="end_date" />
+          </div>
           <p id="simulation_price"></p>
-          <p id="simulation_msg"></p>
+          <div>
+            <p id="simulation_msg"></p>
+          </div>
         </form>
       </div>
       <section>
@@ -1349,79 +1359,7 @@
       <img src="./common/images/hoshino_logo.webp" />
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- Initialize Swiper -->
-    <script>
-      var swiper = new Swiper(".swiper", {
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
-      });
-
-      document
-        .getElementById("reservation")
-        .addEventListener("submit", async function (event) {
-          event.preventDefault();
-
-          const form = event.target;
-          const formData = new FormData(form);
-
-          try {
-            const response = await fetch("https://apitest/", {
-              method: "POST",
-              body: formData,
-            });
-
-            if (!response.ok) {
-              throw new Error("Network response was not ok");
-            }
-
-            const result = await response.json();
-            console.log(result);
-            alert("Reservation successful!");
-          } catch (error) {
-            console.error("Error:", error);
-            alert("There was a problem with your reservation.");
-          }
-        });
-
-      document
-        .getElementById("simulation")
-        .addEventListener("change", function (e) {
-          e.preventDefault();
-
-          document.getElementById("simulation_price").innerHTML = "";
-          const err_msg = document.getElementById("simulation_msg");
-
-          const form = document.getElementById("simulation");
-          const formData = new FormData(form);
-
-          const start_date = new Date(formData.get("start_date"));
-          const end_date = new Date(formData.get("end_date"));
-          const members = formData.get("members");
-
-          const date_difference =
-            (end_date - start_date) / (1000 * 60 * 60 * 24);
-
-          if (isNaN(start_date) || isNaN(end_date)) {
-            err_msg.innerText = "Please select date";
-            return;
-          }
-
-          if (date_difference <= 5) {
-            err_msg.innerText = "Please select a period of more than 5 days";
-            return;
-          }
-
-          const addtional_days = date_difference - 5;
-          const basic_price = members * 68000;
-          const addtional_price = members * addtional_days * 15000;
-          const price = addtional_price + basic_price;
-
-          document.getElementById("simulation_price").innerHTML = "¥" + price;
-          err_msg.innerText = "";
-        });
-    </script>
+    <script type="module" src="./common/js/script.js"></script>
   </body>
 </html>
