--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             </h2>
 
             <h2 class="tab-label-heading">
-              <label class="tab-label" for="tab-c">Ski Resorts</label>
+              <label class="tab-label" for="tab-c">HPB PASS</label>
             </h2>
 
             <h2 class="tab-label-heading">
@@ -206,20 +206,20 @@
                     Book a minimum of 5 days and customize the length of your
                     stay according to your preferences.
                   </p>
-                  <h6>Variety of Activities</h6>
-                  <p>
-                    Apart from skiing, the Powder Belt offers a rich après-ski
-                    scene with local dining, Ice Villages, and luxurious
-                    accommodations. Resorts like Hoshino Resorts TOMAMU provide
-                    unique attractions such such as Mina-Mina Beach(Largest
-                    indoor pool in Japan) and Ice Bar in the Ice Village,
-                    ensuring an exciting stay.
-                  </p>
-                  <p>
-                    Experience unparalleled snow quality, diverse ski options,
-                    and vibrant après-ski activities in the stunning Hokkaido
-                    Powder Belt.
-                  </p>
+                  <h6>Package Includes:</h6>
+
+                  <ul>
+                    <li>Campervan rental</li>
+                    <li>
+                      5-day pass of
+                      HPB（https://hokkaido-powder-belt.jp/index-en.php）
+                    </li>
+                    <li>Sleeping bags</li>
+                    <li>Access to services at Hoshino Resorts TOMAMU</li>
+                    <li>
+                      Access to services at OMO 7 Asahikawa by Hoshino Resorts.
+                    </li>
+                  </ul>
                 </div>
               </div>
 
@@ -264,12 +264,17 @@
                     <li>Comprehensive set of amenities</li>
                     <li>Mina-Mina Beach entry</li>
                     <li>Kirin-no Yu entry</li>
+                    <li>parking ＊not include securing parking space</li>
                   </ul>
                 </ul>
               </div>
             </div>
 
-            <a href="./" class="my-midium">Learn More</a>
+            <div>
+              <a href="https://www.snowtomamu.jp/winter/en/" class="my-midium"
+                >Learn More</a
+              >
+            </div>
             <div class="column-2 my-midium">
               <div>
                 <h5>Hoshino Resorts TOMAMU</h5>
@@ -284,15 +289,28 @@
                   <ul>
                     <li>Free 2 breakfast tickets per person</li>
                     <li>Comprehensive set of amenities</li>
-                    <li>Mina-Mina Beach entry</li>
-                    <li>Kirin-no Yu entry</li>
+                    <li>Sauna facilities</li>
+                    <li>30 types of snow wax for free</li>
+                    <li>Use of drying room</li>
+                    <li>
+                      Access to OMO Base for local information and resources
+                    </li>
                   </ul>
                 </ul>
-
-                <a href="./" class="my-midium">Learn More</a>
               </div>
 
               <img src="./common/images/omo7_asahikawa.webp" />
+            </div>
+
+            <p class="warning">
+              Parking fees are not included in the plan and it must be paid
+              separately at OMO7Asahikawa by Hoshino Resorts.
+            </p>
+
+            <div class="text-center">
+              <a href="https://www.snowtomamu.jp/winter/en/" class="my-midium"
+                >Learn More</a
+              >
             </div>
 
             <div class="reservation-btn">
@@ -614,7 +632,7 @@
 
             <p>&nbsp;</p>
 
-            <p>Furano Ski Resort</p>
+            <h6>Furano Ski Resort</h6>
 
             <p>
               Furano Ski Resort features "champagne powder" snow, offering long,
@@ -659,14 +677,14 @@
             <h6>Asahidake ropeway</h6>
 
             <p>
-              Asahidake ropeway connects Asahidake Onsen (1,100m) to the fifth
+              Asahidake ropeway connects Asahidake Onsen (1,100m) to the fifth6h
               station of Asahidake (1,600m) in 10 minutes, offering some of the
               best powder in Japan.
             </p>
 
             <p>&nbsp;</p>
 
-            <p>Minamifurano Ski Hill</p>
+            <h6>Minamifurano Ski Hill</h6>
 
             <p>
               A national ski resort located in Minami Furano Town. It is a ski
@@ -676,7 +694,7 @@
 
             <p>&nbsp;</p>
 
-            <p>Pippu Ski Resort</p>
+            <h6>Pippu Ski Resort</h6>
 
             <p>
               Pippu ski resort overlooks the vast Kamikawa Basin with the
@@ -774,7 +792,10 @@
             <div class="swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="./common/images/kirinoyu.webp" />
+                  <img
+                    src="./common/images/kirinoyu.webp"
+                    alt="An open air bath facing the rich forests of Tomamu."
+                  />
                 </div>
                 <div class="swiper-slide">
                   <img src="./common/images/shisainoyu.webp" />
@@ -951,7 +972,11 @@
             </label>
 
             <div class="answer">
-              <p>No</p>
+              <p>
+                Yes, we offer installment payment options. Please contact our
+                customer service team for more details on how to set up an
+                installment plan.
+              </p>
             </div>
           </div>
           <div class="faq">
@@ -965,8 +990,9 @@
 
             <div class="answer">
               <p>
-                Any additional activities or services not included in the
-                package will incur extra charges.
+                The package price includes taxes and service fees. Any
+                additional activities or services not included in the package
+                will incur extra charges.
               </p>
             </div>
           </div>
@@ -1043,12 +1069,11 @@
             </label>
 
             <div class="answer">
-              <p>
-                Please click here to check the parking lot location. Hoshino
-                Resort Tomamu https://www.snowtomamu.jp/winter/areamap/ OMO7
-                Asahikawa by Hoshino Resort
-                https://omo-hotels.com/asahikawa/access/#anc-parking
-              </p>
+              <p>Please click here to check the parking lot location.</p>
+              <p>Hoshino Resort Tomamu</p>
+              <p>https://www.snowtomamu.jp/winter/areamap/</p>
+              <p>OMO7 Asahikawa by Hoshino Resort</p>
+              <p>https://omo-hotels.com/asahikawa/access/#anc-parking</p>
             </div>
           </div>
         </div>
