simulationへの文言追加

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
       <a href="https://japan-crc.com/" target="_blank">
         <img src="./common/images/CRC_logo.webp" />
       </a>
-      <img src="./common/images/hoshino_logo.webp" />
+
+      <a href="https://hoshinoresorts.com/jp/" target="_blank">
+        <img src="./common/images/hoshino_logo.webp" />
+      </a>
     </nav>
 
     <header>
@@ -507,7 +510,18 @@
             </div>
           </form>
 
-          <p><strong>Children under 6 years old are free of charge.</strong></p>
+          <div>
+            <p>
+              <strong>Children under 6 years old are free of charge.</strong>
+            </p>
+            <p>Camper rental fee</p>
+            <p>+Hokkaido Powder Belt ticket for the number of people</p>
+            <p>
+              + use of Hoshino Resorts facilities (hotel rooms not included)
+            </p>
+            <p>This is a trial calculation.</p>
+            <p>It is different from the reservation method.</p>
+          </div>
         </div>
       </section>
       <section>
@@ -1367,8 +1381,13 @@
     <!-- END Main Area -->
 
     <footer>
-      <img src="./common/images/CRC_logo.webp" />
-      <img src="./common/images/hoshino_logo.webp" />
+      <a href="https://japan-crc.com/" target="_blank">
+        <img src="./common/images/CRC_logo.webp" />
+      </a>
+
+      <a href="https://hoshinoresorts.com/jp/" target="_blank">
+        <img src="./common/images/hoshino_logo.webp" />
+      </a>
     </footer>
 
     <!-- Initialize Swiper -->
