BOOKING REQUESTへと文言修正

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         <h5 class="header-title">
           Flexible Campervan Tour Packages Tailored to Your Needs
         </h5>
-        <a class="header-reservation-btn" href="./">Book now</a>
+        <a class="header-reservation-btn" href="#reservation"
+          >BOOKING REQUEST</a
+        >
       </div>
       <div id="video-area">
         <video
@@ -219,7 +221,6 @@
                       5-day pass of
                       HPB（https://hokkaido-powder-belt.jp/index-en.php）
                     </li>
-                    <li>Sleeping bags</li>
                     <li>Access to services at Hoshino Resorts TOMAMU</li>
                     <li>
                       Access to services at OMO 7 Asahikawa by Hoshino Resorts.
@@ -229,7 +230,7 @@
               </div>
 
               <div class="reservation-btn">
-                <a href="#reservation">BOOK NOW</a>
+                <a href="#reservation">BOOKING REQUEST</a>
               </div>
             </div>
           </div>
@@ -336,13 +337,13 @@
             </p>
 
             <div class="text-center my-midium">
-              <a href="https://www.snowtomamu.jp/winter/en/" class="my-midium"
+              <a href="https://omo-hotels.com/asahikawa/en/" class="my-midium"
                 >Learn More</a
               >
             </div>
 
             <div class="reservation-btn">
-              <a href="#reservation">BOOK NOW</a>
+              <a href="#reservation">BOOKING REQUEST</a>
             </div>
           </div>
           <div class="tab-panel panel-c" role="tabpanel">
@@ -388,13 +389,13 @@
             </div>
 
             <div class="reservation-btn">
-              <a href="#reservation">BOOK NOW</a>
+              <a href="#reservation">BOOKING REQUEST</a>
             </div>
           </div>
           <div class="tab-panel panel-d" role="tabpanel">
             <p class="my-midium">
               Customize your stay from a minimum of 5 days, available between
-              December 20, 2024, and March 31, 2025.
+              December 21, 2024, and March 31, 2025.
             </p>
             <h6>Sample Itinerary</h6>
             <ul>
@@ -461,7 +462,7 @@
             </ul>
 
             <div class="reservation-btn">
-              <a href="#reservation">BOOK NOW</a>
+              <a href="#reservation">BOOKING REQUEST</a>
             </div>
           </div>
         </div>
@@ -511,9 +512,8 @@
           </form>
 
           <div>
-            <p>
-              <strong>Children under 6 years old are free of charge.</strong>
-            </p>
+            <p>Children under 6 years old are free of charge.</p>
+            <p>※There is a charge for meals at the hotel.<br /></p>
             <p>Camper rental fee</p>
             <p>+Hokkaido Powder Belt ticket for the number of people</p>
             <p>
@@ -585,7 +585,7 @@
         </div>
 
         <div class="reservation-btn my-midium">
-          <a href="#reservation">BOOK NOW</a>
+          <a href="#reservation">BOOKING REQUEST</a>
         </div>
       </section>
 
@@ -1344,7 +1344,7 @@
             <textarea id="notes" name="notes" rows="4"></textarea>
           </div>
           <div class="reservation-btn my-midium">
-            <button type="submit">BOOK NOW</button>
+            <button type="submit">BOOKING REQUEST</button>
           </div>
         </form>
       </section>
